# save-money

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  database.py  debug_models.py  diag.py  flet_requirements.txt  inspection.txt  main.py  pyproject.toml  test_storage.py
.github/workflows/: ci.yml
components/: chart_widgets.py  empty_state.py  header.py  loading_spinner.py  navigation.py  summary_card.py  transaction_card.py
data/: financas.json  financas.json.bak
models/: data_model.py
pages/: bills.py  categories.py  dashboard.py  mentor.py  profile.py  reports.py  settings.py  transactions.py
repositories/: finance_repository.py
services/: ai_service.py
theme/: app_theme.py
